--- a/app/assets/sass/coruscope.scss
+++ b/app/assets/sass/coruscope.scss
@@ -17,3 +17,4 @@
 @import 'comfortable_mexican_sofa/codemirror_overrides';
 @import 'comfortable_mexican_sofa/wysihtml5_overrides';
 @import 'comfortable_mexican_sofa/base';
+@import 'jqtree';
