--- a/app/views/layouts/admin/cms/_head.html.haml
+++ b/app/views/layouts/admin/cms/_head.html.haml
@@ -7,6 +7,7 @@
   = stylesheet_link_tag 'comfortable_mexican_sofa/admin/application'
   = javascript_include_tag 'comfortable_mexican_sofa/application'
   = javascript_include_tag 'comfortable_mexican_sofa/admin/application'
+  = javascript_include_tag 'coruscope'
   
   = yield :head
   
