fancytree page navigation implemented

--- a/app/views/layouts/admin/cms/_center.html.haml
+++ b/app/views/layouts/admin/cms/_center.html.haml
@@ -3,5 +3,5 @@
     %button.close{:type => 'button', :class => "close", :data => {:dismiss => 'alert'}} &times;
     = message
 
-.column-content
+#dynamic-content.column-content
   = yield
