implemented the meta tab updates for page objects within the ajax ui

--- a/app/assets/sass/coruscope.scss
+++ b/app/assets/sass/coruscope.scss
@@ -17,4 +17,5 @@
 @import 'comfortable_mexican_sofa/codemirror_overrides';
 @import 'comfortable_mexican_sofa/wysihtml5_overrides';
 @import 'comfortable_mexican_sofa/base';
+@import 'coruscope.ui';
 @import 'ui.fancytree';
