--- a/app/assets/sass/coruscope.ui.scss.erb
+++ b/app/assets/sass/coruscope.ui.scss.erb
@@ -1,3 +1,31 @@
+#content .row-fluid:nth-child(1) {
+    position: relative;
+    height: 38px;
+    overflow: hidden;
+    #content_messages {
+        position: absolute;
+        top: 2px;
+        right: 2px;
+        width: 60%;
+        z-index: 0;
+        text-align: right;
+        a {
+            z-index: 80;
+        }
+    }
+    .nav-tabs {
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: 10;
+        background-color: #fff;
+    }
+}
+
+#content .row-fluid + .row-fluid {
+    padding-top: 0.8em;
+}
+
 /* Restyle content-actions (right-hand column moved into left) */
 .content-actions {
     padding: 0 0.8em;
