--- a/app/views/admin/cms/pages/_form.html.haml
+++ b/app/views/admin/cms/pages/_form.html.haml
@@ -1,9 +1,4 @@
 - content_for :right_column do
-  #form-save.box
-    %label.checkbox.inline
-      %input{:type => 'checkbox'}
-      = ::Cms::Page.human_attribute_name(:is_published)
-    %button.btn.btn-small.btn-primary.pull-right
   = render :partial => 'admin/cms/files/index'
 
 = render 'admin/cms/partials/page_form_before', :object => form
@@ -11,19 +6,26 @@
 = form.text_field :label, :data => {:slugify => @page.new_record?}
 
 = content_for_ajax :meta_pane do
-  - unless @site.pages.count == 0 || @site.pages.root == @page
-    = form.text_field :slug, :data => {:slug => true}
-    - unless @page.new_record?
-      = form.text_field :full_path, :id => 'full-path', :disabled => true
+  = comfy_form_for @page, :as => :page, :url => {:action => :update}, :html => {:multipart => true} do |metaform|
+    - unless @site.pages.count == 0 || @site.pages.root == @page
+      = metaform.text_field :slug, :data => {:slug => true}
+      - unless @page.new_record?
+        = metaform.text_field :full_path, :id => 'full-path', :disabled => true
 
-  - if (options = ::Cms::Layout.options_for_select(@site)).present?
-    = form.select :layout_id, options, {}, 'data-url' => form_blocks_admin_cms_site_page_path(@site, @page.id.to_i)
+    - if (options = ::Cms::Layout.options_for_select(@site)).present?
+      = metaform.select :layout_id, options, {}, 'data-url' => form_blocks_admin_cms_site_page_path(@site, @page.id.to_i)
 
-  - if (options = ::Cms::Page.options_for_select(@site, @page)).present?
-    = form.select :parent_id, options
+    - if (options = ::Cms::Page.options_for_select(@site, @page)).present?
+      = metaform.select :parent_id, options
 
-  - if (options = ::Cms::Page.options_for_select(@site, @page, nil, 0, false)).present?
-    = form.select :target_page_id, [["---- #{t('.select_target_page')} ----", nil]] + options
+    - if (options = ::Cms::Page.options_for_select(@site, @page, nil, 0, false)).present?
+      = metaform.select :target_page_id, [["---- #{t('.select_target_page')} ----", nil]] + options
+
+    #form-save.box
+      %label.checkbox.inline
+        %input{:type => 'checkbox'}
+        = ::Cms::Page.human_attribute_name(:is_published)
+      %button.btn.btn-small.btn-primary.pull-right
 
 = render 'admin/cms/partials/page_form_inner', :object => form
 
