enable wysihtml5 and codemirror editors on AJAX and use vertical form layout

--- a/app/assets/sass/comfortable_mexican_sofa/bootstrap_overrides.css.sass
+++ b/app/assets/sass/comfortable_mexican_sofa/bootstrap_overrides.css.sass
@@ -30,12 +30,12 @@ body#coruscope
   #{$form_fields}
     height: auto
     padding: 6px
-  form.formatted.form-horizontal
+  form.formatted
     .control-group
       margin-bottom: 5px
       .controls
         #{$form_fields}
-          width: 100%
+          width: 96%
         textarea
           height: 400px
         textarea.short
