--- a/app/views/admin/cms/pages/edit.html.haml
+++ b/app/views/admin/cms/pages/edit.html.haml
@@ -4,5 +4,5 @@
 - content_for :right_column do
   = render 'admin/cms/sites/mirrors', :object => @page
 
-= comfy_form_for @page, :as => :page, :url => {:action => :update}, :html => {:multipart => true} do |form|
+= comfy_form_for @page, as: :page, url: {action: :update}, html: {multipart: true}, type: :vertical do |form|
   = render form
