--- a/app/views/admin/cms/pages/_form.html.haml
+++ b/app/views/admin/cms/pages/_form.html.haml
@@ -34,11 +34,10 @@
 
 = render :partial => 'form_blocks'
 
-= if request.xhr?
+- if request.xhr?
   != javascript_tag do
     CMS.wysiwyg();
     CMS.codemirror();
-
 
 = form.check_box :is_published, :label => t('.is_published')
 
