--- a/app/assets/sass/coruscope.ui.scss.erb
+++ b/app/assets/sass/coruscope.ui.scss.erb
@@ -21,9 +21,24 @@
         background-color: #fff;
     }
 }
+#content .nav-tabs a {
+    color: #005580;
+}
+#content .nav-tabs .active a {
+    color: $decoration
+}
 
 #content .row-fluid + .row-fluid {
     padding-top: 0.8em;
+}
+
+form.formatted
+    .control-group
+        .control-label {
+    font-size: 85%;
+    font-weight: bold;
+    letter-spacing: 0.05em;
+    margin-bottom: 0px;
 }
 
 /* Restyle content-actions (right-hand column moved into left) */
