--- a/app/views/layouts/admin/cms/_nav.html.haml
+++ b/app/views/layouts/admin/cms/_nav.html.haml
@@ -7,7 +7,7 @@
 
   - if @site && !@site.new_record?
     = active_link_to '#layouts-tree', :wrap_tag => :li do
-      %i.icon-th
+      %i.icon-th-list
       = t('admin.cms.base.layouts')
     = active_link_to '#pages-tree', :wrap_tag => :li do
       %i.icon-file
