- add bootstrap-based layouts for devise controllers - isolate gumby assets from application and coruscope assets

--- a/app/assets/stylesheets/coruscope.css
+++ b/app/assets/stylesheets/coruscope.css
@@ -1,5 +1,5 @@
 /*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
+ * This is a manifest file that'll be compiled into coruscope.css, which will include all the files
  * listed below.
  *
  * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
@@ -9,4 +9,8 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *
  *= require_self
+ *= require 'comfortable_mexican_sofa/lib/bootstrap'
+ *= require 'comfortable_mexican_sofa/lib/bootstrap-datetimepicker'
+ *= require 'comfortable_mexican_sofa/lib/bootstrap-wysihtml5'
+ *= require 'comfortable_mexican_sofa/admin/application'
  */
