--- a/app/views/layouts/admin/cms/_nav.html.haml
+++ b/app/views/layouts/admin/cms/_nav.html.haml
@@ -1,21 +1,23 @@
 = render '/admin/cms/partials/navigation_before'
 
 %ul.nav.nav-tabs
-  = active_link_to '#sites-tree', :active => ['admin/cms/sites'], :wrap_tag => :li do
+  = active_link_to '#sites-tree', :active => ['admin/cms/sites'], :onclick => click_action_for(:new_item_link, :site, :new), :wrap_tag => :li do
     %i.icon-globe
     = t('admin.cms.base.sites')
 
   - if @site && !@site.new_record?
-    = active_link_to '#layouts-tree', :wrap_tag => :li do
+    = active_link_to '#layouts-tree', :onclick => click_action_for(:new_item_link, :layout, :new), :wrap_tag => :li do
       %i.icon-th-list
       = t('admin.cms.base.layouts')
-    = active_link_to '#pages-tree', :wrap_tag => :li do
+    = active_link_to '#pages-tree', :onclick => click_action_for(:new_item_link, :page, :new), :wrap_tag => :li do
       %i.icon-file
       = t('admin.cms.base.pages')
-    = active_link_to @site.snippets.empty? ? new_admin_cms_site_snippet_path(site_id: @site.id) : '#snippets-tree', :wrap_tag => :li do
+    = active_link_to @site.snippets.empty? ? new_admin_cms_site_snippet_path(site_id: @site.id) : '#snippets-tree',
+      :onclick => click_action_for(:new_item_link, :snippet, :new), :wrap_tag => :li do
       %i.icon-share
       = t('admin.cms.base.snippets')
-    = active_link_to @site.files.empty? ? new_admin_cms_site_file_path(site_id: @site.id) : '#files-tree', :wrap_tag => :li do
+    = active_link_to @site.files.empty? ? new_admin_cms_site_file_path(site_id: @site.id) : '#files-tree',
+      :onclick => click_action_for(:new_item_link, :file, :new), :wrap_tag => :li do
       %i.icon-picture
       = t('admin.cms.base.files')
     = active_link_to '#meta_pane', :wrap_tag => :li do
