--- a/app/views/admin/cms/pages/_form.html.haml
+++ b/app/views/admin/cms/pages/_form.html.haml
@@ -6,7 +6,7 @@
 = form.text_field :label, :data => {:slugify => @page.new_record?}
 
 = content_for_ajax :meta_pane do
-  = comfy_form_for @page, as: :page, url: {action: :update}, html: {multipart: true}, type: :vertical do |metaform|
+  = comfy_form_for @page, as: :page, url: {action: @page.new_record? ? :create : :update}, html: {multipart: true}, type: :vertical do |metaform|
     - unless @site.pages.count == 0 || @site.pages.root == @page
       = metaform.text_field :slug, :data => {:slug => true}
       - unless @page.new_record?
