added site identity (path) to the top navbar

--- a/app/assets/sass/coruscope.ui.scss.erb
+++ b/app/assets/sass/coruscope.ui.scss.erb
@@ -1,3 +1,22 @@
+#coruscope
+  .navbar
+    .brand {
+        margin-right: 10%;
+        .site-identity {
+            position: relative;
+            top: -0.15em;
+            background-color: #005580; /* #0088CC; */
+            color: #fff;
+            font-size: 70%;
+            font-family: courier;
+            font-weight: bold;
+            padding: 2px 5px;
+      }
+    }
+    .nav {
+        width: 60%;
+    }
+
 #content .row-fluid:nth-child(1) {
     position: relative;
     height: 38px;
