adapted (vertical) form styling for create actions and include the essential identifier in main layout form

--- a/app/assets/sass/coruscope.ui.scss.erb
+++ b/app/assets/sass/coruscope.ui.scss.erb
@@ -17,6 +17,17 @@
         width: 60%;
     }
 
+#coruscope
+  textarea.CodeMirror {
+    resize: both;
+}
+
+#dynamic-content
+  .page-header {
+    padding-bottom: 0;
+    margin-bottom: 1em;
+}
+
 #content .row-fluid:nth-child(1) {
     position: relative;
     height: 38px;
