--- a/app/views/admin/cms/layouts/_form.html.haml
+++ b/app/views/admin/cms/layouts/_form.html.haml
@@ -4,10 +4,10 @@
 = render 'admin/cms/partials/layout_form_before', :object => form
 
 = form.text_field :label, :data => {:slugify => @layout.new_record?}
+= form.text_field :identifier, :data => {:slug => true}
 
 = content_for_ajax :meta_pane do
   = comfy_form_for @layout, as: :layout, url: {action: @layout.new_record? ? :create : :update}, type: :vertical do |metaform|
-    = form.text_field :identifier, :data => {:slug => true}
     - if (options = Cms::Layout.options_for_select(@site, @layout)).present?
       = form.select :parent_id, [["---- #{t('.select_parent_layout')} ----", nil]] + options
 
@@ -17,6 +17,9 @@
 = form.text_area :content, :data => {'cms-cm-mode' => 'text/html'}
 = form.text_area :css, :data => {'cms-cm-mode' => 'css'}
 = form.text_area :js, :data => {'cms-cm-mode' => 'javascript'}
+
+- unless @site.nil? || @site.new_record?
+  = hidden_field_tag 'layout[site_id]', @site.id
 
 - if request.xhr?
   != javascript_tag do
