added mandatory field value copying behaviour (slug/identifier) before form submission

--- a/app/assets/sass/coruscope.ui.scss.erb
+++ b/app/assets/sass/coruscope.ui.scss.erb
@@ -11,6 +11,7 @@
             font-family: courier;
             font-weight: bold;
             padding: 2px 5px;
+            border-radius: 0.5em;
       }
     }
     .nav {
@@ -62,6 +63,10 @@
     padding-top: 0.8em;
 }
 
+#content .left-column .tab-pane {
+    min-height: 186px;
+}
+
 form.formatted
     .control-group
         .control-label {
@@ -77,4 +82,8 @@ form.formatted
 }
 .content-actions > div {
     margin-top: 1em;
+}
+
+.content-actions select {
+    width: 100%;
 }
