--- a/app/views/admin/cms/layouts/new.html.haml
+++ b/app/views/admin/cms/layouts/new.html.haml
@@ -1,5 +1,6 @@
 .page-header
   %h4= t('.title')
 
-= comfy_form_for @layout, :as => :layout, :url => {:action => :create}, type: :vertical do |form|
-  = render form
+%div{data: {copy: true}}
+  = comfy_form_for @layout, :as => :layout, :url => {:action => :create}, type: :vertical, data: {copy: :slug} do |form|
+    = render form
