--- a/app/views/admin/cms/pages/_form.html.haml
+++ b/app/views/admin/cms/pages/_form.html.haml
@@ -1,3 +1,4 @@
+// form for Cms::Page objects
 - content_for :right_column do
   = render :partial => 'admin/cms/files/index'
 
@@ -40,6 +41,9 @@
     CMS.codemirror();
 
 = form.check_box :is_published, :label => t('.is_published')
+= data_copy_field_for :page, :slug
+= data_copy_field_for :page, :parent_id
+= data_copy_field_for :page, :layout_id
 
 = render 'admin/cms/partials/page_form_after', :object => form
 
