--- a/app/views/site_partials/navigation/_main_nav.html.erb
+++ b/app/views/site_partials/navigation/_main_nav.html.erb
@@ -1,17 +1,30 @@
-<div id="main_nav" class="row navbar pretty">
+<div id="main_nav" class="row navbar pretty" gumby-fixed="top">
     <a class="toggle" gumby-trigger="#main_nav > li" href="#"><i class="icon-menu"></i></a>
     <ul>
       <% @cms_site.pages.root.children.published.each do |page| %>
         <li class="<%= (@cms_page.slug == page.slug) ? 'active' : '' %>">
             <%= link_to page.label, page_path(page) %>
             <% unless page.children.published.empty? %>
-            <ul class="subnav">
-              <% page.children.published.each do |subpage| %>
-                <li class="(@cms_page.slug == subpage.slug) ? 'active' : ''">
-                    <%= link_to subpage.label, page_path(subpage) %>
-                </li>
-              <% end %>
-            </ul>
+            <div class="dropdown">
+              <ul class="subnav">
+                <% page.children.published.each do |subpage| %>
+                    <li class="<%= (@cms_page.slug == subpage.slug) ? 'active' : '' %>">
+                      <%= link_to subpage.label, page_path(subpage) %>
+                      <% unless subpage.children.published.empty? %>
+                      <div class="dropdown">
+                        <ul class="subnav2">
+                        <% subpage.children.published.each do |subsubpage| %>
+                        <li class="<%= (@cms_page.slug == page.slug) ? 'active' : '' %>">
+                          <%= link_to subsubpage.label, page_path(subsubpage) %>
+                        </li>
+                        <% end %>
+                        </ul>
+                      </div>
+                      <% end %>
+                    </li>
+                <% end %>
+              </ul>
+            </div>
             <% end %>
         </li>
       <% end %>
