--- a/app/views/site_partials/navigation/_main_nav.html.erb
+++ b/app/views/site_partials/navigation/_main_nav.html.erb
@@ -1,6 +1,12 @@
-<div id="main_nav" class="row navbar pretty" gumby-fixed="top">
+<div id="main_nav" class="row navbar" gumby-fixed="top">
     <a class="toggle" gumby-trigger="#main_nav > li" href="#"><i class="icon-menu"></i></a>
     <ul>
+      <% if defined?(param_1) && param_1 %>
+        <%# HOME link %>
+        <li class="home">
+          <%= link_to defined?(param_2) ? content_tag(:i, '', :class => param_2) : @cms_site.pages.root.label, page_path(@cms_site.pages.root) %>
+        </li>
+      <% end %>
       <% @cms_site.pages.root.children.published.each do |page| %>
         <li class="<%= (@cms_page.slug == page.slug) ? 'active' : '' %>">
             <%= link_to page.label, page_path(page) %>
