--- a/app/assets/sass/gumby/_fonts.scss
+++ b/app/assets/sass/gumby/_fonts.scss
@@ -1,7 +1,7 @@
 /* Fonts */
 
 // Import Google Web Fonts
-@import url(//fonts.googleapis.com/css?family=Open+Sans:400,300,600,700);
+// @import url(//fonts.googleapis.com/css?family=Open+Sans:400,300,600,700);
 
 
 // Set local icon font
@@ -9,10 +9,10 @@
   font-family: '#{$icons}';
   font-style: normal;
   font-weight: 400;
-  src: url(../fonts/icons/#{$icons}.eot);
-  src: url('../fonts/icons/#{$icons}.eot?#iefix') format('ie9-skip-eot'),
-       url('../fonts/icons/#{$icons}.woff') format('woff'),
-       url('../fonts/icons/#{$icons}.ttf')  format('truetype');
+  src: url(../assets/fonts/icons/#{$icons}.eot);
+  src: url('../assets/fonts/icons/#{$icons}.eot?#iefix') format('ie9-skip-eot'),
+       url('../assets/fonts/icons/#{$icons}.woff') format('woff'),
+       url('../assets/fonts/icons/#{$icons}.ttf')  format('truetype');
 }
 
 // To include your own, local copies of fonts, use the following template
